--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -9,7 +9,8 @@ DEFAULT_TEMPERATURE=0.1
 DEFAULT_SYSTEM_PROMPT="You are a helpful AI assistant created by Defense Unicorns."
 DEFAULT_MODEL=vllm
 LEAPFROGAI_API_BASE_URL=https://leapfrogai-api.uds.dev/openai/v1
-LEAPFROGAI_API_KEY=my-test-key
+#If specified, app will use OpenAI instead of Leapfrog
+OPENAI_API_KEY=
 
 # PLAYWRIGHT
 USERNAME=user1@test.com
