--- a/packages/api/chart/values.yaml
+++ b/packages/api/chart/values.yaml
@@ -10,7 +10,7 @@ image:
     fsGroup: 65532
 
 supabase:
-  url: "https://supabase-kong.###ZARF_VAR_HOSTED_DOMAIN###"
+  url: "###ZARF_VAR_SUPABASE_CLUSTER_URL###"
 
 api:
   replicas: 1
