--- a/uds-bundles/dev/gpu/uds-bundle.yaml
+++ b/uds-bundles/dev/gpu/uds-bundle.yaml
@@ -39,6 +39,11 @@ packages:
     path: ../../../packages/text-embeddings
     ref: dev
 
+  # Backend capability for RAG and VectorDB - - not currently in this repo so it builds from ghcr
+  - name: rag
+    repository: ghcr.io/defenseunicorns/packages/leapfrogai/rag
+    ref: 0.3.1
+
   # Model for converting audio to text
   - name: whisper
     path: ../../../packages/whisper
