--- a/src/leapfrogai_ui/.env.example
+++ b/src/leapfrogai_ui/.env.example
@@ -7,9 +7,10 @@ PUBLIC_MESSAGE_LENGTH_LIMIT=10000
 # PRIVATE DYNAMIC
 DEFAULT_TEMPERATURE=0.1
 DEFAULT_SYSTEM_PROMPT="You are a helpful AI assistant created by Defense Unicorns."
-DEFAULT_MODEL=vllm
+DEFAULT_MODEL=vllm # ex. for OpenAI would be: gpt-3.5-turbo
 LEAPFROGAI_API_BASE_URL=https://leapfrogai-api.uds.dev/openai/v1
-LEAPFROGAI_API_KEY=my-test-key
+#If specified, app will use OpenAI instead of Leapfrog
+OPENAI_API_KEY=
 
 # PLAYWRIGHT
 USERNAME=user1@test.com
