move toast to store

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -6,7 +6,7 @@
   },
   "private": true,
   "scripts": {
-    "dev": "npm run supabase:start && vite dev",
+    "dev": "vite dev",
     "build": "vite build",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
