--- a/src/leapfrogai_ui/.dockerignore
+++ b/src/leapfrogai_ui/.dockerignore
@@ -13,6 +13,9 @@ Dockerfile
 .git
 .gitignore
 .gitattributes
+.github/
+adr/
+tests/
 README.md
 .npmrc
 .prettierrc
@@ -20,6 +23,7 @@ README.md
 .editorconfig
 .vscode
 .idea
+.venv
 build
 package
 
@@ -32,3 +36,44 @@ playwright/.auth
 
 
 supabase/
+
+# Copied from .gitignore
+data/*
+*.tar.zst
+__pycache__
+.venv
+.ipynb_checkpoints
+.vscode/
+venv
+.DS_Store
+dist/
+tmp/
+temp/
+zarf-sbom/
+/values.yaml
+.pytest_cache
+*egg-info
+egg-info/
+build/
+*.whl
+.model/
+*.gguf
+.env
+.ruff_cache
+.branches
+.temp
+src/leapfrogai_api/config.yaml
+
+# local model and tokenizer files
+*.bin
+pytorch_model.bin.index.json
+special_tokens_map.json
+tokenizer_config.json
+tokenizer.json
+config.json
+generation_config.json
+vocabulary.json
+.model/
+
+# go binaries
+api/main
