feat(api): Runs endpoints (#583)
* Splits up router into Runs, Messages, Threads, and Run-Steps
* Implemented Runs endpoints
* Adds schema for Runs
* Adds Tests for Runs, Messages, and Threads
* Fixes a few issues from other parts of the code to ensure Runs works correctly
* Remove old RAG deployment from UDS Bundles

---------

Co-authored-by: Gregory Horvath <gphorvath@defenseunicorns.com>

--- a/packages/api/chart/values.yaml
+++ b/packages/api/chart/values.yaml
@@ -10,7 +10,7 @@ image:
     fsGroup: 65532
 
 supabase:
-  url: "https://supabase-kong.###ZARF_VAR_HOSTED_DOMAIN###"
+  url: "http://supabase-kong.leapfrogai.svc.cluster.local:80"
 
 api:
   replicas: 1
