Unit Tests for CRUDBase
- Mocks for db session and api response
- Unit tests for all CRUDBase operations
- Move conftest.py to unit tests (from root)
- New Makefile include for test actions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [  # Dev dependencies needed for all of lfai
     "pytest",
     "httpx",
     "ruff",
+    "python-dotenv",
+    "pytest-asyncio"
 ]
 requires-python = "~=3.11"
 
