refactor vllm Dockerfile to be multistage and use a smaller base image

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # temporary deployment and development artifacts
 data/*
-*.tar.zst
+**/*.tar.zst
 __pycache__
 .venv
 .ipynb_checkpoints
@@ -16,7 +16,7 @@ zarf-sbom/
 *egg-info
 egg-info/
 build/
-*.whl
+**/*.whl
 .model/
 *.gguf
 .env
