Address comments Fix issue with README.md changes

--- a/packages/api/Dockerfile
+++ b/packages/api/Dockerfile
@@ -1,5 +1,6 @@
 ARG ARCH
-FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:latest as sdk
+ARG LOCAL_VERSION
+FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:${LOCAL_VERSION} as sdk
 
 FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-dev-${ARCH} as builder
 ARG SDK_DEST=src/leapfrogai_sdk/build
