--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "langchain-community >= 0.2.1",
     "unstructured[md,pptx] >= 0.14.2", # Only specify necessary filetypes to prevent package bloat (e.g. 130MB vs 6GB)
     "pylibmagic >= 0.5.0", # Resolves issue with libmagic not being bundled with OS - https://github.com/ahupp/python-magic/issues/233, may not be needed after this is merged https://github.com/ahupp/python-magic/pull/294
-    "python-magic >= 0.4.27"
+    "python-magic >= 0.4.27",
+    "openpyxl >= 3.1.5",
+    "psutil >= 6.0.0"
 ]
 requires-python = "~=3.11"
 
