changes var name to EXPOSE_API to be more clear that the API will be exposed beyond just debugging purposes now that we have API keys

--- a/packages/api/zarf.yaml
+++ b/packages/api/zarf.yaml
@@ -15,9 +15,9 @@ constants:
     value: "1.23.3"
 
 variables:
-  - name: EXPOSE_OPENAPI_SCHEMA
+  - name: EXPOSE_API
     default: "false"
-    description: "Flag to expose the OpenAPI schema for debugging."
+    description: "Flag to expose the API service"
   - name: HOSTED_DOMAIN
     default: "uds.dev"
   - name: DEFAULT_EMBEDDINGS_MODEL
