--- a/packages/api/zarf.yaml
+++ b/packages/api/zarf.yaml
@@ -17,7 +17,7 @@ constants:
 variables:
   - name: EXPOSE_OPENAPI_SCHEMA
     default: "false"
-    description: "Flag to expose the API service"
+    description: "Flag to expose the OpenAPI schema for debugging."
   - name: HOSTED_DOMAIN
     default: "uds.dev"
   - name: DEFAULT_EMBEDDINGS_MODEL
