Add tests for all file types

--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -82,8 +82,10 @@
     "msw": "^2.2.14",
     "openai": "^4.47.1",
     "playwright": "^1.42.1",
+    "pptxgenjs": "^3.12.0",
     "sveltekit-superforms": "^2.13.1",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   }
 }
