chore: standardize the name of our Zarf vars relating to domain values

--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -17,7 +17,7 @@ constants:
     value: '###ZARF_PKG_TMPL_IMAGE_VERSION###'
 
 variables:
-  - name: HOSTED_DOMAIN
+  - name: DOMAIN
     default: "uds.dev"
   - name: ENABLE_AUTH
     description: 'Enable Supabases built-in authentication and authorization parts'
