--- a/packages/ui/chart/ui-values.yaml
+++ b/packages/ui/chart/ui-values.yaml
@@ -13,7 +13,7 @@ package:
   name: leapfrogai-ui
   subdomain: '###ZARF_VAR_SUBDOMAIN###'
   domain: '###ZARF_VAR_DOMAIN###'
-  supabase_url: '###ZARF_VAR_SUPABASE_URL###'
+  supabase_url: 'https://supabase-kong.###ZARF_VAR_DOMAIN###'
   supabase_anon_key: '###ZARF_VAR_SUPABASE_ANON_KEY###'
   message_length_limit: '###ZARF_VAR_MESSAGE_LENGTH_LIMIT###'
 
