--- a/uds-bundles/dev/gpu/uds-config.yaml
+++ b/uds-bundles/dev/gpu/uds-config.yaml
@@ -11,19 +11,11 @@ variables:
     #tensor_parallel_size: 1   # TODO: reintroduce when vllm changes get pulled in
 
   supabase:
-    keycloak_redirect_uris:
-      - "https://supabase-kong.uds.dev/auth/v1/callback"
-    webOrigins:
-      - "https://ai.uds.dev"
-    hosted_domain: "uds.dev"
-
-  leapfrogai-api:
-    hosted_domain: "uds.dev"
+    domain: "uds.dev"
 
   leapfrogai-ui:
     subdomain: ai
     domain: uds.dev
     model: vllm
-    supabase_url: https://supabase-kong.uds.dev
     disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
     supabase_anon_key: ''
