--- a/src/leapfrogai_api/pyproject.toml
+++ b/src/leapfrogai_api/pyproject.toml
@@ -15,12 +15,14 @@ dependencies = [
     "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
     "watchfiles >= 0.21.0",
     "leapfrogai_sdk",
-    "supabase-py-async >= 2.5.6",
+    "supabase >= 2.5.1",
     "langchain >= 0.2.1",
     "langchain-community >= 0.2.1",
     "unstructured[md,xlsx,pptx] >= 0.14.2", # Only specify necessary filetypes to prevent package bloat (e.g. 130MB vs 6GB)
     "pylibmagic >= 0.5.0", # Resolves issue with libmagic not being bundled with OS - https://github.com/ahupp/python-magic/issues/233, may not be needed after this is merged https://github.com/ahupp/python-magic/pull/294
     "python-magic >= 0.4.27",
+    "storage3>=0.7.6", # required by supabase, bug when using previous versions
+    "postgrest>=0.16.8", # required by supabase, bug when using previous versions
     "openpyxl >= 3.1.5",
     "psutil >= 6.0.0"
 ]
