fix zarf var to default expose the api

--- a/packages/api/zarf.yaml
+++ b/packages/api/zarf.yaml
@@ -16,7 +16,7 @@ constants:
 
 variables:
   - name: EXPOSE_API
-    default: "false"
+    default: "true"
     description: "Flag to expose the OpenAPI schema for debugging."
   - name: HOSTED_DOMAIN
     default: "uds.dev"
