--- a/uds-bundles/latest/cpu/uds-config.yaml
+++ b/uds-bundles/latest/cpu/uds-config.yaml
@@ -6,19 +6,11 @@ variables:
     gpu_limit: 0
 
   supabase:
-    keycloak_redirect_uris:
-      - "https://supabase-kong.uds.dev/auth/v1/callback"
-    webOrigins:
-      - "https://ai.uds.dev"
-    hosted_domain: "uds.dev"
-
-  leapfrogai-api:
-    hosted_domain: "uds.dev"
+    domain: "uds.dev"
 
   leapfrogai-ui:
     subdomain: ai
     domain: uds.dev
     model: llama-cpp-python
-    supabase_url: https://supabase-kong.uds.dev
     disable_keycloak: false # If this package is deployed as a bundle, keycloak is assumed default
     supabase_anon_key: ''
