--- a/packages/api/zarf.yaml
+++ b/packages/api/zarf.yaml
@@ -15,8 +15,8 @@ constants:
     value: "1.23.3"
 
 variables:
-  - name: EXPOSE_OPENAPI_SCHEMA
-    default: "false"
+  - name: EXPOSE_API
+    default: "true"
     description: "Flag to expose the OpenAPI schema for debugging."
   - name: HOSTED_DOMAIN
     default: "uds.dev"
