Renames variable for clarity

--- a/packages/supabase/zarf.yaml
+++ b/packages/supabase/zarf.yaml
@@ -49,8 +49,8 @@ variables:
   - name: ENABLE_EXTERNAL_KEYCLOAK
     description: 'Enable the integration between Supabase and an external keycloak instance be enabled'
     default: "true"
-  - name: MAX_FILE_UPLOAD_SIZE
-    description: 'The maximum upload file size for Supabase storage'
+  - name: MAX_FILE_UPLOAD_SIZE_IN_BYTES
+    description: 'The maximum upload file size for Supabase storage in bytes, default is equivalent to 100Mb'
     default: "104857600"
 
 components:
