--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -81,6 +81,7 @@
     "dompurify": "^3.1.6",
     "fuse.js": "^7.0.0",
     "highlight.js": "^11.10.0",
+    "isomorphic-dompurify": "^2.13.0",
     "lit": "^3.1.4",
     "markdown-it": "^14.1.0",
     "msw": "^2.2.14",
