--- a/src/leapfrogai_ui/package.json
+++ b/src/leapfrogai_ui/package.json
@@ -78,6 +78,7 @@
     "ai": "^3.1.11",
     "carbon-pictograms-svelte": "^12.10.0",
     "concurrently": "^8.2.2",
+    "docx": "^8.5.0",
     "dompurify": "^3.1.6",
     "fuse.js": "^7.0.0",
     "highlight.js": "^11.10.0",
@@ -87,8 +88,10 @@
     "msw": "^2.2.14",
     "openai": "^4.47.1",
     "playwright": "^1.42.1",
+    "pptxgenjs": "^3.12.0",
     "sveltekit-superforms": "^2.13.1",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   }
 }
