chore: #491 support arm64 (Apple Silicon) (#659)
* Refactor the build to build everything in docker containers so it can be platform agnostic
* Refactor Makefile to abstract the docker build from the zarf package to simplify the ci build without a divergent pattern, as well as allow quicker dev iteration on docker builds
* refactor vllm Dockerfile to be multistage and use a smaller base image
* Remove unnecessary apt installs in final vllm docker image
* migrate macos instructions to uds dev README.md
* chore: update release workflow to set ARCH and LOCAL_VERSION docker build arguments

---------

Co-authored-by: Gavin Scallon <gavin@defenseunicorns.com>
Co-authored-by: Jon Perry <yrrepnoj@gmail.com>

--- a/packages/llama-cpp-python/Dockerfile
+++ b/packages/llama-cpp-python/Dockerfile
@@ -1,7 +1,11 @@
+ARG ARCH
+ARG LOCAL_VERSION
+FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:${LOCAL_VERSION} as sdk
 
 # hardened and slim python w/ developer tools image
 FROM --platform=$BUILDPLATFORM ghcr.io/defenseunicorns/leapfrogai/python:3.11-dev as builder
-
+ARG SDK_DEST=src/leapfrogai_sdk/build
+USER root
 WORKDIR /leapfrogai
 
 # download model
@@ -12,10 +16,9 @@ ARG REVISION=3f65d882253d1f15a113dabf473a7c02a004d2b5
 
 # NOTE: This is checking for a pre-downloaded model file in the local build dir before downloading the model from HuggingFace
 # TODO: Add checksum validation to verify the model in the local build-dir is the model we expect
-COPY scripts/model_download.py scripts/model_download.py
-COPY build/*.gguf .model/
-RUN if [[ -f .model/model.gguf ]] ; then : ; else REPO_ID=${REPO_ID} FILENAME=${FILENAME} REVISION=${REVISION} python3.11 scripts/model_download.py ; fi
-RUN if [[ -f .model/model.gguf ]] ; then : ; else mv .model/*.gguf .model/model.gguf ; fi
+COPY packages/llama-cpp-python/scripts/model_download.py scripts/model_download.py
+RUN REPO_ID=${REPO_ID} FILENAME=${FILENAME} REVISION=${REVISION} python3.11 scripts/model_download.py
+RUN mv .model/*.gguf .model/model.gguf
 
 
 # create virtual environment for light-weight portability and minimal libraries
@@ -24,9 +27,13 @@ ENV PATH="/leapfrogai/.venv/bin:$PATH"
 
 # copy the llama-cpp-python build dependencies over
 # NOTE: We are copying to this filename because installing 'optional extras' from a wheel requires the absolute path to the wheel file (instead of a wildcard whl)
-COPY build/*.whl build/
-COPY build/lfai_llama_cpp_python*.whl .
-RUN pip install lfai_llama_cpp_python*.whl --no-index --find-links=build/
+COPY --from=sdk /leapfrogai/${SDK_DEST} ${SDK_DEST}
+COPY packages/llama-cpp-python packages/llama-cpp-python
+
+RUN rm -f packages/llama-cpp-python/build/*.whl
+RUN python -m pip wheel packages/llama-cpp-python -w packages/llama-cpp-python/build --find-links=${SDK_DEST}
+
+RUN pip install packages/llama-cpp-python/build/lfai_llama_cpp_python*.whl --no-index --find-links=packages/llama-cpp-python/build/
 
 # hardened and slim python image
 FROM --platform=$BUILDPLATFORM ghcr.io/defenseunicorns/leapfrogai/python:3.11
@@ -38,8 +45,8 @@ WORKDIR /leapfrogai
 COPY --from=builder /leapfrogai/.venv/ /leapfrogai/.venv/
 COPY --from=builder /leapfrogai/.model/ /leapfrogai/.model/
 
-COPY main.py .
-COPY config.yaml .
+COPY packages/llama-cpp-python/main.py .
+COPY packages/llama-cpp-python/config.yaml .
 
 EXPOSE 50051:50051
 
