--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ build/
 .branches
 .temp
 src/leapfrogai_api/config.yaml
+node_modules
+package.json
+package-lock.json
 
 # local model and tokenizer files
 *.bin
