fix(ui) move testing UI deps to dev deps (#778)

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ build/
 src/leapfrogai_api/config.yaml
 .idea/
 /.python-version
+node_modules
+package.json
+package-lock.json
 
 # local model and tokenizer files
 *.bin
