--- a/packages/repeater/Dockerfile
+++ b/packages/repeater/Dockerfile
@@ -1,9 +1,8 @@
-ARG ARCH
 ARG LOCAL_VERSION
-FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:${LOCAL_VERSION} as sdk
+FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:${LOCAL_VERSION} AS sdk
 
 # hardened and slim python w/ developer tools image
-FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-dev-${ARCH} as builder
+FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-dev AS builder
 ARG SDK_DEST=src/leapfrogai_sdk/build
 USER root
 WORKDIR /leapfrogai
@@ -20,7 +19,7 @@ RUN python -m pip wheel packages/repeater -w packages/repeater/build --find-link
 RUN pip install packages/repeater/build/lfai_repeater*.whl --no-index --find-links=packages/repeater/build/
 
 # hardened and slim python image
-FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11-${ARCH}
+FROM ghcr.io/defenseunicorns/leapfrogai/python:3.11
 
 ENV PATH="/leapfrogai/.venv/bin:$PATH"
 
