--- a/packages/vllm/Dockerfile
+++ b/packages/vllm/Dockerfile
@@ -1,7 +1,7 @@
 ARG LOCAL_VERSION
-FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:${LOCAL_VERSION} as sdk
+FROM ghcr.io/defenseunicorns/leapfrogai/leapfrogai-sdk:${LOCAL_VERSION} AS sdk
 
-FROM nvidia/cuda:12.2.2-devel-ubuntu22.04 as builder
+FROM nvidia/cuda:12.2.2-devel-ubuntu22.04 AS builder
 ARG SDK_DEST=src/leapfrogai_sdk/build
 
 # Set the config file defaults
